@@ -1,3 +1,8 @@
+2008-02-27  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tkMacOSXDraw.c: workaround leak in Carbon SetPortPenPixPat()
+	API [Bug 1863346]; avoid repeated PixPat allocation/deallocation.
+
 2008-02-23  Joe English  <jenglish@users.sourceforge.net>
 
 	* library/ttk/combobox.tcl, doc/ttk_combobox.n,
